# auth_engine

./: .pre-commit-config.yaml  .secrets.baseline  auth_project_spec.md  pyproject.toml
artefacts/: answer.md
artefacts/files/: .pre-commit-config.yaml  auth_project_spec_v2.md  dashboard_admin.html  dashboard_viewer.html  login.html  pyproject.toml  scaffold.ps1  server.py
llm/: agentic_development_for_weekends.decision.md  auth_lib_starter_discussion.txt  back_and_forth.md  models.md  phase_0_references.md  resources.md  tutor_persona.md  value_analysis.gemini.md
tests/unit/: test_placeholder.py
